# materios-intent-settlement

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/workflows/: e2e-preprod.yml  rust.yml
docs/: committee-expansion-5-of-11.md  decisions-v1.md  decisions-v2.md  demo-walkthrough.md  onboarding-signing.md  spec-v1.md  test-vectors.json
docs/design/: clob-engine-v0-spec.md  mon-phase1-aegis-extend-design.md  perp-engine-v0-spec.md  settle-claim-l1-verification-design.md
e2e/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
e2e/config/: mainnet.json  preprod.json
e2e/scripts/: demo-reel.sh  full-demo.ts  setup-preprod.sh  tear-down.sh
e2e/src/: cardano.ts  config.ts  fairness.ts  hashing.ts  index.ts  materios.ts  types.ts
e2e/tests/: cardano.test.ts  config.test.ts  e2e.test.ts  fairness.test.ts  hashing.test.ts  materios.test.ts  setup-script.test.ts
keeper/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
keeper/src/: cardano.test.ts  cardano.ts  halt.test.ts  halt.ts  index.ts  keeper.test.ts  keeper.ts  retry.test.ts  retry.ts  script-hash.test.ts  script-hash.ts  slot-retry.ts  state.test.ts  state.ts  voucher-sig-verify.test.ts  voucher-sig-verify.ts
keeper/src/__tests__/: slot-drift-retry.test.ts
keeper/src/cli/: daemon.ts  keeper.ts
keeper/src/daemon/: daemon.test.ts  index.ts
keeper/src/daemon/__tests__/: uri-leak.test.ts
keeper/tests/integration/: e2e-happy-path.test.ts  preprod.test.ts
pallets/committee-governance/: Cargo.toml
pallets/committee-governance/src/: lib.rs  tests.rs  types.rs
pallets/intent-settlement/: Cargo.toml
pallets/intent-settlement/src/: benchmarking.rs  integration.rs  lib.rs  proptest.rs  tests.rs  types.rs  voucher_canonicalize.rs  weights.rs
pallets/intent-settlement/tests/: parity_test.rs
pallets/oracle/: Cargo.toml
pallets/oracle/src/: benchmarking.rs  lib.rs  tests.rs  types.rs
pallets/perp-engine/: Cargo.toml
pallets/perp-engine/src/: benchmarking.rs  lib.rs  math.rs  tests.rs  types.rs
runtime-upgrades/spec-227-perp-engine-polish/: README.md  build-wasm.sh  ceremony.py  register_matra_usd_feed.py
sdk/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdk/src/: builders.test.ts  builders.ts  cardano-address.test.ts  cardano-address.ts  client.test.ts  client.ts  fees.test.ts  fees.ts  hashing.test.ts  hashing.ts  index.ts  multisig.test.ts  multisig.ts  nonce-race.test.ts  parity.test.ts  rpc.test.ts  rpc.ts  types.ts
